tests/baselines/reference/missingCloseBraceInClassDeclaration.errors.txt
tests/cases/compiler/missingCloseBraceInClassDeclaration.ts(7,1): error TS1005: '}' expected.


==== tests/cases/compiler/missingCloseBraceInClassDeclaration.ts (1 errors) ====
    class TestCls {
      prop = 0;
      method() {
        return this.prop;
      }
    
    
    
!!! error TS1005: '}' expected.
!!! related TS1007 tests/cases/compiler/missingCloseBraceInClassDeclaration.ts:1:15: The parser expected to find a '}' to match the '{' token here.